# Lavoe

./: HACKATHON_SETUP.md  README.md  agentic-blur.md  package-lock.json  rules.mdc
backend/: .gitignore  README.md  audio_processing.py  audio_storage.py  chop_harmonic_hp_only.py  env.example  pyproject.toml  requirements.txt  server.py
frontend/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/agent-chat/: route.ts
frontend/app/api/chat/: route.ts
frontend/components/: ai-chat.tsx  audio-player.tsx  audio-processor.tsx  audio-upload.tsx  beat-maker.tsx
frontend/components/beat/: AgenticBlurOverlay.tsx  AiSidebar.tsx  AudioPlayer.tsx  BeatHeader.tsx  BeatTimeline.tsx  Catalog.tsx  FileUpload.tsx  MusicLoadingState.tsx  RecordingComponent.tsx  TracksPanel.tsx  TracksSidebar.tsx  Waveform.tsx  types.ts  useRecording.ts
frontend/components/ui/: card.tsx  nav-rail.tsx
frontend/hooks/: use-audio-processing.ts
frontend/lib/: .fonts.ts.swp  audio-utils.ts  fonts.ts
