[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "librosa>=0.11.0",
    "pandas>=2.3.2",
    "simpleaudio>=1.0.4",
    "fastapi[standard]>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "soundfile>=0.12.1",
    "ipython>=9.5.0",
]
